--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,15 @@ baseURL = 'https://igniscape.github.io/'
 languageCode = 'en-us'
 title = 'Blog'
 
+#[outputs]
+#home = ['html', 'rss']
+#section = ['html', 'rss']
+
+[params]
+[params.socialIcons]
+name=["rss"]
+url="https://igniscape.github.io/index.xml"
+
 [markup]
 # (Optional) To be able to use all Prism plugins, the theme enables unsafe
 # rendering by default
