--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://igniscape.github.io/'
 languageCode = 'en-us'
-title = 'Blog'
+title = 'M. Titov'
 
 #[outputs]
 #home = ['html', 'rss']
@@ -65,6 +65,16 @@ source = "hugo_stats.json"
 target = "assets/watching/hugo_stats.json"
 
 [params]
+# dark or light, defaults to light
+defaultTheme = "dark"
+# gray red green yellow blue purple aqua orange, defaults to blue
+themeColor = "blue"
+# soft medium hard, defaults to medium
+themeContrast = "hard"
+author = "M. Titov"
+subtitle = "Software Engineer"
+#description = " is a coder and computer enthusiast."
+
 [params.prism]
 languages = [
     "markup",
